トップページのビュー修正

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -27,7 +27,7 @@
     <div class="main-contents-right">
       <div class="main-content-right-upper">
         <div class="upper-explain-title">
-        まだ知らない練習場所を見つけよう
+        ■まだ知らない練習場所を見つける
         </div>
         <div class="explain-content">
         マーカーをクリックして詳細情報を確認できます
@@ -80,11 +80,9 @@
 
       <div class="main-content-right-lower">
         <div class="lower-explain-title">
-        新しい練習場所を共有しよう
+        ■新しい練習場所を共有する
         </div>
-        <div class="new-place">
-          <%= link_to "新規練習場所を作成する", new_place_path, method: :get%>
-        </div>
+          <%= link_to "新規練習場所を作成する", new_place_path, method: :get, class:"new-place"%>
       </div>
     </div>
   </div>
