--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -100,6 +100,10 @@ a {
   color:#FFF;
 }
 
+.btn:hover {
+  background:rgba(51,112,121,80%);
+}
+
 /* メインの右 */
 .main-contents-right {
   width:40%;
@@ -223,14 +227,22 @@ a {
   font-weight: bold;
 }
 
-.new-place {
+
+.new-place  {
+  display:block;
   font-size:32px;
   font-weight:bold;
-  padding:0 8px;
-  border-radius: 4%;
-  border:1px solid #fff;
-  background-color: #fd9535;
+  background-color: #fff100;
+  border-bottom: 5px solid #ccc100;
+  border-radius: 0;
+  padding:8px 8px;
   text-align: center;
+}
+
+.new-place:hover {
+  margin-top: 3px;
+  background: #fff20a;
+  border-bottom: 2px solid #ccc100;
 }
 
 .hidden {
