--- a/app/assets/stylesheets/places/new.css
+++ b/app/assets/stylesheets/places/new.css
@@ -6,7 +6,7 @@
 
 .contents {
   width:800px;
-  height:600px;
+  height:80%;
   margin: 0 auto;
   background-color:#fff;
 }
@@ -108,16 +108,11 @@
 .new-price-form {
   width:50%;
   display:flex;
-  justify-content:center;
-  line-height:80px;
 }
 
 .new-price-form > .price {
-  height:30px;
-  width:40%;
-  margin:25px 10px 0;
-  line-height:80px;
-  text-align:right;
+  height:80px;
+  width:100%;
 }
 
 .new-image {
@@ -163,6 +158,7 @@
   color: #000;
   background-color:rgba(51,112,121,20%);
   border-bottom: 5px solid rgba(51,112,121,40%);
+  margin-bottom:10px;
 }
 
 .content > a:hover {
