--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -1,3 +1,8 @@
+.account-page {
+  height:100%;
+}
+
+
 .account-page .account-page__inner {
   width: 980px;
   margin: 60px auto;
@@ -59,7 +64,7 @@
 .account-page .btn {
   display: inline-block;
   height: 50px;
-  padding: 0 30px;
+  padding: 0;
   line-height: 50px;
   letter-spacing: 1px;
   text-align: center;
