--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,10 @@
+<%= render "shared/header" %>
 <div class='account-page' id='account-page'>
   <div class='account-page__inner clearfix'>
     <div class='account-page__inner--left account-page__header'>
       <h2>Create Account</h2>
       <h5>新規アカウントの作成</h5>
+      <%= link_to "ログインページ", new_user_session_path, class: 'btn'%>
     </div>
     <div class='account-page__inner--right user-form'>
       <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
@@ -47,3 +49,4 @@
     <% end %>
   </div>
 </div>
+<%= render "shared/footer" %> 
