messageのビュー変更

--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -203,12 +203,14 @@
   color: #000;
   background-color: #fff100;
   border-bottom: 5px solid #ccc100;
+  margin-left:10px;
 }
 
 .commit:hover {
   margin-top: 3px;
   color: #000;
   background-color: #fff100;
+  border-bottom: 2px solid #ccc100;
 }
 
 
