--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,8 +42,12 @@
             <%= f.password_field :password_confirmation, autocomplete: "off"%>
           </div>
         </div>
-        <div class='actions'>
-          <%= f.submit "Create Account", class: 'btn'%>
+        <div class='field'>
+          <div class='field-submit'>
+            <div class='actions'>
+              <%= f.submit "Create Account", class: 'btn'%>
+            </div>
+          </div>
         </div>
       </div>
     <% end %>
