--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -74,7 +74,7 @@ header {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0px 5px;
   font-weight: bold;
-  width: 100px;
+  width: 50%;
   text-align:center;
 }
 
@@ -82,6 +82,16 @@ header {
   text-decoration: none;
   color:#FFF;
   font-size:20px;
+}
+
+.notice {
+  background-color:rgba(51,112,121,25%);
+  padding-left:20px;
+}
+
+.alert {
+  background-color:rgba(255,0,0,25%);
+  padding-left:20px;
 }
 
 .hidden {
