--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,37 +1,44 @@
 <header>
-    <div class="header-contents">
-      <div class="header-logo">
-        <div class="header-title">
-          <%= link_to "Maro's Footwork", root_path, method: :get %>
-        </div>
-      </div>
-      <div class="header-container">
-        <div class="header-container-contents">
-          <ul>
-            <% if user_signed_in? %>
-            <div class="header-list">
-              <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
-            </div>
-            <div class="header-list">
-              <%= link_to  "ログアウト",  destroy_user_session_path, method: :delete %>
-            </div>
-            <% else %>
-            <div class="header-list">
-              <%= link_to "ログイン", new_user_session_path, method: :get %>
-            </div>
-            <% end %>
-            <div class="header-list">
-              <a href="about.html">
-                <li>about</li>
-              </a>
-            </div>
-            <div class="header-list">
-              <a href="contact.html">
-                <li>contact</li>
-              </a>
-            </div>
-          </ul>          
-        </div>
+  <div class="header-contents">
+    <div class="header-logo">
+      <div class="header-title">
+        <%= link_to "Maro's Footwork", root_path, method: :get %>
       </div>
     </div>
+    <div class="header-container">
+      <div class="header-container-contents">
+        <ul>
+          <% if user_signed_in? %>
+          <div class="header-list">
+            <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
+          </div>
+          <div class="header-list">
+            <%= link_to  "ログアウト",  destroy_user_session_path, method: :delete %>
+          </div>
+          <% else %>
+          <div class="header-list">
+            <%= link_to "ログイン", new_user_session_path, method: :get %>
+          </div>
+          <div class="header-list">
+            <%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post %>
+          </div>
+          <% end %>
+          <div class="header-list">
+            <a href="about.html">
+              <li>マイページ</li>
+            </a>
+            </a>
+          </div>
+        </ul>          
+      </div>
+    </div>
+  </div>
 </header>
+<% if flash[:notice] || flash[:alert]%>
+<div class="notice">
+  <%= flash[:notice] %>
+</div>
+<div class="alert">
+  <%= flash[:alert] %>
+</div>
+<% end %>
