--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
             <%= f.label :nickname%>
           </div>
           <div class='field-input'>
-            <%= f.text_field :nickname, autofocus: true%>
+            <%= f.text_field :nickname, maxlength:"15", autofocus: true%>
           </div>
         </div>
         <div class='field'>
