長いユーザー名でスタイリングが崩れるのを防止

--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -19,7 +19,9 @@
 
 .user-name > a {
   color:#fafafa;
-  font-size:36px;
+  font-size:20px;
+  display:inline-block;
+  max-width:150px;
   text-decoration:none;
 }
 
