rootページビュー微修正

--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -112,16 +112,17 @@ a {
 /* メインの右上 */
 .main-content-right-upper {
   width:85%;
-  height:35%;
+  height:30%;
   margin:0 auto;
 }
 
 .upper-explain-title {
-  padding-top:88px;
+  padding-top:30px;
   color: #FFFFFF;
   font-family: "Poppins", Poppins;
   font-size: 30px;
   font-weight: bold;
+  border-bottom:1px solid #FFF;
 }
 
 .explain-content {
@@ -225,6 +226,8 @@ a {
   font-family: "Poppins", Poppins;
   font-size: 30px;
   font-weight: bold;
+  border-bottom:1px solid #FFF;
+  margin-bottom:10px;
 }
 
 
