--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -27,13 +27,16 @@
     <div class="main-contents-right">
       <div class="main-content-right-upper">
         <div class="upper-explain-title">
-        ■まだ知らない練習場所を見つける
+        まだ知らない練習場所を見つけよう
         </div>
         <div class="explain-content">
         マーカーをクリックして詳細情報を確認できます
         </div>
         <div class="explain-content">
         お気に入りの練習場所を見つけよう
+        </div>
+        <div class="explain-content">
+        チャットで新たな仲間と交流しよう
         </div>
       </div>
       <%#マーカークリックした場所の情報#%>
@@ -80,7 +83,7 @@
 
       <div class="main-content-right-lower">
         <div class="lower-explain-title">
-        ■新しい練習場所を共有する
+        新しい練習場所を共有しよう
         </div>
           <%= link_to "新規練習場所を作成する", new_place_path, method: :get, class:"new-place"%>
       </div>
