チャットページのビュー微修正

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -39,7 +39,7 @@
             <p>練習場所の住所 :  </p><p class= "place-info"><%= @place.address%></p>
         </div>
         <div class="place-content-list">
-            <p>金額 : </p><p class= "place-info"><%= @place.price%>円</p>
+            <p>金額 : </p><p class= "place-info"><%= @place.price%></p>
         </div>
         <div class="place-content-list">
             <p>備考 : </p><p class= "place-info"><%= @place.remark%></p>
