--- a/app/assets/stylesheets/places/new.css
+++ b/app/assets/stylesheets/places/new.css
@@ -6,7 +6,7 @@
 
 .contents {
   width:800px;
-  height:80%;
+  height:100%;
   margin: 0 auto;
   background-color:#fff;
 }
@@ -18,6 +18,7 @@
   justify-content:center;
   align-items:center;
   padding-top:20px;
+  height:100%;
 }
 
 .new-name {
@@ -36,13 +37,20 @@
 }
 .new-name-form {
   width:50%;
+  height:100px;
 }
 
 .new-name-form > textarea {
+  display:inline-block;
   height:80px;
   width:100%;
 }
 
+.new-name-form > .field_with_errors > textarea {
+  display:inline-block;
+  height:80px;
+  width:100%;
+}
 
 .new-address {
   width:600px;
@@ -63,6 +71,12 @@
 }
 
 .new-address-form > textarea {
+  height:80px;
+  width:100%;
+}
+
+.new-address-form > .field_with_errors > textarea {
+  display:inline-block;
   height:80px;
   width:100%;
 }
@@ -90,6 +104,7 @@
   width:100%;
 }
 
+
 .new-price {
   width:600px;
   height:100px;
@@ -110,10 +125,20 @@
   display:flex;
 }
 
-.new-price-form > .price {
+.new-price-form > textarea {
   height:80px;
   width:100%;
 }
+
+.new-price-form > .field_with_errors {
+  width:100%;
+}
+.new-price-form > .field_with_errors > textarea {
+  display:inline-block;
+  height:80px;
+  width:100%;
+}
+
 
 .new-image {
   width:600px;
