サイト名変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header-contents">
     <div class="header-logo">
       <div class="header-title">
-        <%= link_to "Maro's Footwork", root_path, method: :get %>
+        <%= link_to "Breakin' Community", root_path, method: :get %>
       </div>
     </div>
     <div class="header-container">
