トップページのボタンのホバー状態のCSSを修正

--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -232,12 +232,11 @@ a {
 
 
 .new-place  {
-  display:block;
+  display:inline-block;
   font-size:32px;
   font-weight:bold;
   background-color: #fff100;
   border-bottom: 5px solid #ccc100;
-  border-radius: 0;
   padding:8px 8px;
   text-align: center;
 }
