--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -108,3 +108,8 @@ select {
   width:80%;
   border:1px solid #337079;
 }
+
+input[type="submit" i] {
+  border:none;
+  border-bottom: 5px solid #ccc100;
+}
