トップページのビュー変更

--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -139,6 +139,7 @@ a {
 }
 .place-show {
   display:flex;
+  justify-content:space-between;
   width:100%;
   height:100%;
   border:1px solid #dedede;
@@ -154,9 +155,9 @@ a {
 
 .item-box {
   height: 100%;
-  width: 80%;
+  width: 100%;
   background-color: rgba(0, 0, 0,0);
-  margin:0 auto;
+  margin-left:20px;
 
 }
 .item-box-img {
@@ -166,14 +167,14 @@ a {
 }
 .place-show-right{
   width:60%;
-  display:flex;
+  margin-right:20px;
+  margin-left:10px;
 }
 
 .detail-table {
-  width: 80%;
+  width: 100%;
   height:100%;
   padding:20px 0;
-  margin:0 auto;
 }
 
 .detail-item {
