--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -8,7 +8,7 @@
     <div class= "side-header">
       <% if user_signed_in? %>
         <div class="user-name">
-        <%= link_to  edit_user_path(current_user) do  %>
+        <%= link_to user_path(current_user) do  %>
           <%= current_user.nickname%>
         <% end %>
         </div>
