--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
         <ul>
           <% if user_signed_in? %>
           <div class="header-list ">
-            <%= link_to current_user.nickname, edit_user_path(id: current_user.id), method: :get %>
+            <%= link_to current_user.nickname, user_path(id: current_user.id), method: :get %>
           </div>
           <div class="header-list">
             <%= link_to  "ログアウト",  destroy_user_session_path, method: :delete %>
@@ -23,12 +23,6 @@
             <%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post %>
           </div>
           <% end %>
-          <div class="header-list">
-            <a href="about.html">
-              <li>マイページ</li>
-            </a>
-            </a>
-          </div>
         </ul>          
       </div>
     </div>
