--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -9,7 +9,7 @@
             練習場所の名前
           </div>
           <div class="new-name-form">
-            <%= f.text_area :name, placeholder:"（必須 )", maxlength:"40" %>
+            <%= f.text_area :name, placeholder:"（必須 )", maxlength:"15" %>
           </div>
         </div>
         <div class="new-address">
@@ -17,7 +17,7 @@
             練習場所の住所
           </div>
           <div class="new-address-form">
-            <%= f.text_area :address, placeholder:"（必須 )", maxlength:"80" %>
+            <%= f.text_area :address, placeholder:"（必須 )", maxlength:"40" %>
           </div>
         </div>
         <div class="new-price">
@@ -25,7 +25,7 @@
             金額
           </div>
           <div class="new-price-form">
-            <%= f.text_area :price, placeholder:"例）300" ,class:"price" %>
+            <%= f.text_area :price, placeholder:"例）300", maxlength:"50" %>
           </div>
         </div>
         <div class="new-remark">
@@ -33,7 +33,7 @@
             備考欄
           </div>
           <div class="new-remark-form">
-            <%= f.text_area :remark, placeholder:"よく練習している時間帯や施設の練習可能時間などの詳細などを記入ください", maxlength:"100" %>
+            <%= f.text_area :remark, placeholder:"よく練習している時間帯や施設の練習可能時間などの詳細などを記入ください", maxlength:"80" %>
           </div>
         </div>
         <div class="new-image">
