練習場所の文字数変更に伴いレイアウト変更

--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -6,6 +6,7 @@ header {
   height: 100px;
   /* background-color: antiquewhite; */
   background-color: #337079;
+  border-bottom:1px solid #fff;
 }
 
 .header-contents {
@@ -110,6 +111,7 @@ footer {
   height: 100px;
   /* background-color: rgba(255, 127, 80, 0.473); */
   background-color: #337079;
+  border-top:1px solid #fff;
 }
 
 .domain {
