--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,6 +25,14 @@
             <%= f.email_field :email%>
           </div>
         </div>
+        <div class="field">
+          <div class="field-label">
+            ユーザーアイコン画像
+          </div>
+          <div class="edit-image-form">
+            <%= f.file_field :image, class: 'image' %>
+          </div>
+        </div>
         <div class='field'>
           <div class='field-submit'>
             <div class='actions'>
