練習場所を登録していない場合のビューを自ユーザーと他人のユーザーに分けて追加

--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -103,6 +103,21 @@
   background-color:rgba(0,0,0,0.3);
 }
 
+.mypage-main-content-right-lower {
+  width:70%;
+  height:50%;
+  padding:25px;
+  margin:0 auto;
+}
+
+.mypage-lower-explain-title {
+  color: #FFFFFF;
+  font-family: "Poppins", Poppins;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom:10px;
+}
+
 .mypage-place-show {
   display:flex;
   justify-content:space-between;
