--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -43,16 +43,21 @@
       <div class="main-content-right-middle ">
         <% @places.each do |place|%>
           <div class="hidden place-show" id="placeShow">
-            <div class="place-show-left">
+            <div class="mypage-place-show-left">
               <% if place.image.attached?%>
-                <div class="item-box">
+                <div class="mypage-item-box">
                   <%= image_tag place.image ,class:"item-box-img" %>
                 </div>
               <% else %>
-                <div class="item-box">
+                <div class="mypage-item-box">
                   <%= image_tag ("default_place.png") ,class:"item-box-img" %>
                 </div>
               <% end %>
+                <div class="mypage-place-content-list">
+                  <p>チャット参加人数：</p>
+                  <p class= "place-info"><%= "#{@user_places.where(place_id: place.id).count}人"%></p>
+                </div>
+                <%= link_to "チャットページへ", new_place_message_path(place) ,class:"mypage-new-place" %>
             </div>
             <div class="place-show-right">
               <table class="detail-table">
