--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -34,17 +34,30 @@
   align-items: center;
   color:#dedede;
   font-size:20px;
+  font-weight:bold;
 }
 
 .user-nickname {
   height:25%;
+  font-size:30px;
 }
 .user-crew {
   height:25%;
 }
 
 .user-crew > a {
-  color:#dedede;
+  display:inline-block;
+  color: #000;
+  background-color:#79CF9F;
+  border-bottom: 5px solid #3BB26F;
+  margin-bottom:10px;
+}
+
+.user-crew > a:hover {
+  margin-top: 3px;
+  color: #000;
+  background-color:#79CF9F;
+  border-bottom: 2px solid #3BB26F;
 }
 
 .user-edit {
@@ -52,7 +65,18 @@
 }
 
 .user-edit > a {
-  color:#dedede;
+  display:inline-block;
+  color: #000;
+  background-color:#79CF9F;
+  border-bottom: 5px solid #3BB26F;
+  margin-bottom:10px;
+}
+
+.user-edit > a:hover {
+  margin-top: 3px;
+  color: #000;
+  background-color:#79CF9F;
+  border-bottom: 2px solid #3BB26F;
 }
 
 /*中央右*/
