--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -124,3 +124,33 @@ footer {
   text-shadow: -4px 3px 0 #fa4141, -8px 6px 0 #000;
   color:#fff;
 }
+
+@media (max-width: 1024px) {
+
+}
+
+@media (max-width: 599px) {
+ .header-title {
+  font-size: 20px;
+ } 
+ .header-logo {
+   width:50%;
+ }
+
+ .header-container {
+  width: 50%;
+  }
+
+ .header-container-contents {
+  display: inline-block;
+  width: 100%;
+  }
+
+  .header-container-contents > ul {
+    width:100%;
+  }
+
+  .header-list > a {
+  font-size:15px;
+  }
+}
