--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -23,27 +23,17 @@ header {
   width: 500px;
   box-sizing: border-box;
   display: flex;
+  text-align:center;
+  position:relative;
 }
-
-.header-logo > img {
-  width: 90px;
-  height: 90px;
-  padding-top: 5px;
-}
-
-// .header-title {
-//   font-family: 'Bangers', cursive;
-//   font-size: 32px;
-//   line-height: 100px;
-//   width: 300px;
-// }
 
 .header-title {
   font-size: 40px;
   font-style: italic;
   letter-spacing: .1em;
   text-shadow: -4px 3px 0 #fa4141, -8px 6px 0 #000;
-  line-height: 100px
+  position:absolute;
+  top:25%;
 }
 
 .header-title > a {
@@ -78,6 +68,7 @@ header {
   font-weight: bold;
   text-align:center;
   position:relative;
+
 }
 
 .header-list > a {
@@ -130,15 +121,18 @@ footer {
 }
 
 @media (max-width: 599px) {
+  .header-contents {
+  width: 100%;
+  }
  .header-title {
-  font-size: 20px;
+  font-size: 15px;
  } 
  .header-logo {
-   width:50%;
+   width:40%;
  }
 
  .header-container {
-  width: 50%;
+  width: 60%;
   }
 
  .header-container-contents {
