ヘッダーcssレンダリング

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,7 +21,7 @@
           </div>
           <div class="header-list">
             <%= link_to users_guest_sign_in_path, method: :post  do %>
-              ゲスト<span class="br"><br></span>ログイン
+              ゲスト<br class="br">ログイン
             <% end %>
           </div>
           <% end %>
