--- a/app/assets/stylesheets/places/index.css.erb
+++ b/app/assets/stylesheets/places/index.css.erb
@@ -251,3 +251,57 @@ a {
 .hidden {
   display:none;
 }
+
+@media (max-width: 599px) {
+  .main {
+    height:100%;
+    display:block;
+  }
+  .main-contents-left {
+    width:100%;
+  }
+  #target {
+    width:100%;
+  }
+  .search {
+    display:flex;
+    justify-content:space-around;
+  }
+  #address {
+    width:60%;
+  }
+  .main-contents-right{
+    width:100%;
+    height:500px;
+  }
+  .main-content-right-upper{
+    width:90%;
+    height:20%;
+  }
+  .upper-explain-title {
+    font-size:20px;
+    padding:0;
+  }
+  .explain-content {
+    font-size:15px;
+  }
+  .main-content-right-middle{
+    height:60%;
+  }
+
+  .mypage-place-show-left {
+    font-size:10px;
+  }
+  .place-show-right {
+    margin:0;
+  }
+  .main-content-right-lower{
+    height:20%;
+  }
+  .lower-explain-title {
+    font-size:20px;
+  }
+  .new-place {
+    font-size:20px;
+  }
+}
