--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -127,3 +127,26 @@
   padding: 0;
   font-size: 13px;
 }
+
+@media (max-width: 599px) {
+  .account-page .account-page__inner {
+    width:100%;
+    margin:0;
+    padding:10px;
+  }
+  .account-page .account-page__inner .account-page__inner--left, .account-page .account-page__inner .account-page__inner--right {
+    width:100%;
+  }
+  .account-page .account-page__header h2 {
+    text-align:center;
+  }
+  .account-page .account-page__header h2:after {
+    margin:0 auto;
+  }
+  .account-page .account-page__header .btn {
+    margin:0 auto;
+    width:49%;
+  }
+
+
+}
