--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -139,13 +139,15 @@
   }
   .account-page .account-page__header h2 {
     text-align:center;
+    font-size:30px;
   }
   .account-page .account-page__header h2:after {
     margin:0 auto;
   }
   .account-page .account-page__header .btn {
-    margin:0 auto;
+    margin:5px auto;
     width:49%;
+    display:block;
   }
 
 
