--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -61,13 +61,13 @@
         <% if @user_places.where(user_id: current_user, place_id: @place.id).exists? %>
           <%#最初にこの練習場所を登録した人のみが編集と削除ができる%>
           <% if @user_places.where(place_id: @place.id).order(created_at: :asc).first == @user_places.where(user_id: current_user, place_id: @place.id).first %>
-            <%= link_to "ここの情報を編集する", edit_place_path(@place), method: :get %>
-            <%= link_to "削除する", place_path(@place), method: :delete  %>
+            <%= link_to "編集", edit_place_path(@place), method: :get %>
+            <%= link_to "削除", place_path(@place), method: :delete  %>
           <% end %>
           <%#最初にこの練習場所を登録した人のみが編集と削除ができる%>
         <% end %>
         <%#チャットに参加している場合のみ表示する%>
-        <%= link_to "トップページへ戻る" ,root_path %>
+        <%= link_to "トップページへ" ,root_path %>
       </div>
     </div>
     <div class="main-main">
