マイページのビュー変更(スマホ)

--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -227,3 +227,19 @@
   overflow: scroll;
 
 }
+
+@media (max-width: 599px) {
+  .mypage-wrapper {
+    display:block;
+    height:100%;
+  }
+  .mypage-left-contents {
+    width:100%;
+  }
+  .mypage-right-contents {
+    width:100%;
+    padding:0 5px;
+  }
+  .mypage-place-show {
+  width:100%;
+}
