Revert "Merge pull request #25 from mshkhikomaro/レスポンシブデザイン"
This reverts commit 8b538dc6bd6debadd9b438f2ff81257b48f77c24, reversing
changes made to 81131e9ea88f395d81c01a44d3a7ba27428b6e02.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -102,19 +102,14 @@ select {
 
 .error-alert {
   padding:10px;
-  background-color: rgba(0,0,0,0.3);
 }
 .error-alert > ul {
   margin:10px auto;
   width:80%;
-  border:1px solid #dedede;
+  border:1px solid #337079;
 }
 
 input[type="submit" i] {
   border:none;
   border-bottom: 5px solid #ccc100;
-}
-
-.error-message {
-  color:white;
 }
