--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -20,7 +20,7 @@ header {
 }
 
 .header-logo {
-  width: 500px;
+  width: 70%;
   box-sizing: border-box;
   display: flex;
   text-align:center;
@@ -44,11 +44,12 @@ header {
 .header-container {
   display: inline-block;
   display: flex;
+  width:30%;
 }
 
 .header-container-contents {
   display: inline-block;
-  width: 600px;
+  width: 100%;
 }
 
 .header-container-contents > ul {
@@ -57,7 +58,7 @@ header {
   display: flex;
   /* background-color: beige; */
   padding: 0;
-  width: 500px;
+  width: 100%;
   height:100%;
 }
 
@@ -121,15 +122,27 @@ footer {
 }
 
 @media (max-width: 1024px) {
-
+  .header-logo {
+    width:60%;
+  }
+  .header-title {
+    font-size: 25px;
+   }
+  .header-container {
+    width:40%;
+  }
+  .header-list > a {
+    font-size:15px;
+  }
+  .br {
+    display:inline;
+  }
 }
 
 @media (max-width: 599px) {
-  .header-contents {
-    width: 100%;
-  }
  .header-title {
     font-size: 15px;
+    top:30%;
   } 
  .header-logo {
     width:40%;
