ログインページのビュー変更(タブレット)

--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -4,7 +4,7 @@
 
 
 .account-page .account-page__inner {
-  width: 980px;
+  width: 100%;
   margin: 60px auto;
   padding: 60px;
   background-color: #fff;
@@ -128,6 +128,11 @@
   font-size: 13px;
 }
 
+@media (max-width: 1024px) {
+  .account-page .field .field-submit .btn {
+    letter-spacing: 3px;
+  }
+}
 @media (max-width: 599px) {
   .account-page .account-page__inner {
     width:100%;
