--- a/app/assets/stylesheets/users/show.css.erb
+++ b/app/assets/stylesheets/users/show.css.erb
@@ -16,12 +16,12 @@
 }
 .user-image {
   height:50%;
+  width:100%;
 }
 
 .user-icon {
   height: 100%;
   width: 100%;
-  /*object-fit: contain;*/
   border-radius:50%;
   border:1px solid #dedede;
 }
@@ -153,7 +153,7 @@
 
 .mypage-item-box {
   height: 50%;
-  width: 80%;
+  width: 90%;
   background-color: rgba(0, 0, 0,0);
 }
 
@@ -200,7 +200,7 @@
   font-weight:bold;
   background-color: #fff100;
   border-bottom: 5px solid #ccc100;
-  padding:8px 8px;
+  padding:5px 8px;
   text-align: center;
 }
 
@@ -228,6 +228,37 @@
 
 }
 
+@media (max-width: 1024px) {
+  .mypage-left-contents {
+    width:30%;
+    padding:5px;
+  }
+  .user-image {
+    height:30%;
+  }
+  .user-icon {
+    height:100%;
+  }
+  .user-nickname {
+    font-size:20px;
+    height:33%;
+  }
+  .user-crew {
+    font-size:15px;
+    height:33%;
+  }
+  .user-edit {
+    font-size:15px;
+    height:33%;
+  }
+  .mypage-right-contents {
+    width:70%;
+  }
+  .mypage-place-show {
+  width:100%;
+  height:20%;
+  }
+}
 @media (max-width: 599px) {
   .mypage-wrapper {
     display:block;
