--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -38,8 +38,14 @@ header {
 
 .header-title > a {
   color: #fff;
-  text-decoration:none;
+  transition-duration: 1s;
 }
+.header-title > a:hover {
+  color:#f1f1f1;
+  text-shadow: -4px 3px 0 #00f, -8px 6px 0 #000;
+
+}
+
 
 .header-container {
   display: inline-block;
@@ -81,7 +87,24 @@ header {
   top:50%;
   right:0;
   -webkit-transform : translateY(-50%);
-  transform: translateY(-50%)
+  transform: translateY(-50%);
+  position: relative;
+  display: inline-block;
+  transition: .3s;
+}
+
+.header-list > a::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 0;
+  height: 1px;
+  background-color: #2ecc71;
+  transition: .3s;
+}
+.header-list > a:hover::after {
+  width: 100%;
 }
 
 .br {
