--- a/app/assets/stylesheets/messages/new.css
+++ b/app/assets/stylesheets/messages/new.css
@@ -23,6 +23,22 @@
   display:inline-block;
   max-width:150px;
   text-decoration:none;
+  position: relative;
+  display: inline-block;
+  transition: .3s;
+}
+.user-name > a::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 0;
+  height: 1px;
+  background-color: #2ecc71;
+  transition: .3s;
+}
+.user-name > a:hover::after {
+  width: 100%;
 }
 
 .room-create > a {
@@ -119,14 +135,56 @@
 }
 
 .exit {
-  padding:40px 0 0;
+  padding:20px 0 0;
 }
 
 .exit > a {
-  border:1px solid #337079;
   text-decoration:none;
   color:#337079;
   padding:20px;
+  position: relative;
+  width: 256px;
+  height: 64px;
+  line-height: 64px;
+  transition: all 0.3s;
+  span {
+    transition: all 0.3s;
+    tranform: scale(1, 1);
+  }
+}
+
+.exit > a::before, .exit > a::after {
+  content: '';
+  position: absolute;
+  transition: all 0.3s;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.exit > a::before {
+    z-index: 1;
+  
+  opacity: 0;
+  background: rgba(51, 112, 121, 0.1);
+  transform: scale(0.1, 1);
+}
+
+.exit > a:hover::before {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+
+.exit > a::after {
+  transition: all 0.3s;
+  border: 1px solid rgba(51, 112, 121, 0.5);
+}
+
+.exit > a:hover::after {
+  transform: scale(1, .1);
+  opacity: 0;
 }
 
 .main-main {
