タイトルカラー修正

--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -42,8 +42,7 @@ header {
 }
 .header-title > a:hover {
   color:#f1f1f1;
-  text-shadow: -4px 3px 0 #00f, -8px 6px 0 #000;
-
+  text-shadow: -4px 3px 0 #2ecc71, -8px 6px 0 #000;
 }
 
 
