--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
       <% if @user.image.attached?%>
         <%= image_tag @user.image,class:"user-icon" %>
       <% else %>
-          <%= image_tag ("IMG_9789.JPG") ,class:"user-icon" %>
+          <%= image_tag ("dancer.png") ,class:"user-icon" %>
       <% end %>
     </div>
     <div class= "user-profile">
