メッセージ送信後空白にする

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -146,7 +146,7 @@
     </div>
     <% if @user_places.where(user_id: current_user, place_id: @place.id).exists? %>
       <%= form_with model: [@place, @message], html: {class: "form"} do |f| %>
-          <%= f.text_field :text, class: 'message' %>
+          <%= f.text_field :text, class: 'message', id: 'textField' %>
           <%= f.submit '送信', class: 'commit' %>
       <% end %>
     <% end %>
