--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class= "user-profile">
       <div class= "user-nickname">
-        <%= @user.nickname%>
+        <%= link_to @user.nickname, user_path(id: @user.id), method: :get%>
       </div>
       <% if current_user.id == @user.id  %>
         <div class= "user-crew">
@@ -21,9 +21,26 @@
         </div>
       <% else %>
         <div class= "user-crew">
-          <%= link_to "#{@user.nickname}とのメッセージページへ"%>
+          <%= link_to "ダイレクトメッセージ"%>
         </div>
       <% end %>
+      <div class= "user-relationship">
+        <% if current_user != @user %>
+          <% if @user.followed_by?(current_user) %>
+              <%=link_to "フォロー済み   ", user_relationships_path(@user.id), method: :delete %>
+          <% else %>
+              <%=link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+          <% end %>
+        <% end %>
+      </div>
+      <div class= "user-about">
+        <%=link_to followers_user_path(@user.id), method: :get do%>
+          <%= "#{@follower}" %>フォロー中
+        <% end %>
+        <%=link_to follows_user_path(@user.id), method: :get do%>
+          <%= "#{@follow}" %>フォロワー
+        <% end %>
+      </div>
     </div>
   </div>
   <div class = "mypage-right-contents">
