--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -64,6 +64,10 @@
   padding: 10px;
   letter-spacing: 1px;
 }
+#user_remark {
+  width: 100%;
+  display:block;
+}
 .account-page .field .field-submit .btn {
   width: 100%;
   letter-spacing: 10px;
